:construction: GC分析代码